<resources>
    <string name="app_name">Where Am I?</string>
    <string name="action_history">History</string>
    <string name="no_location">I have no idea where you are</string>
    <string name="find_me">Find me</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_location_history">History</string>
    <string name="title_activity_maps">Map</string>
    <string name="title_activity_settings">Settings</string>
    <string name="show_lat_long">Show location details</string>
    <string name="temp_format">Temperature format</string>
    <string name="radio_celsius">Celsius</string>
    <string name="radio_fahrenheit">Fahrenheit</string>
    <string name="save">Save</string>
    <string name="cancel">Cancel</string>
    <string name="date_placholder">01/01/2015</string>
    <string name="city_placeholder">City, Country</string>
    <string name="weather_placeholder">Sunny - 14C (57F)</string>
</resources>
