<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.mityakoval.whereami.SettingsActivity"
    android:id="@+id/settings">


        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="10dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/show_lat_long"
            android:id="@+id/labelShowLatLong"
            android:textSize="15sp"
            android:textColor="@color/clr_black"
            android:layout_marginTop="15dp"
            android:layout_alignParentTop="true"
            android:layout_alignParentStart="true" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/temp_format"
            android:id="@+id/labelTempFormat"
            android:textSize="15sp"
            android:textColor="@color/clr_black"
            android:layout_below="@+id/toggleButtonLatLong"
            android:layout_alignStart="@+id/labelShowLatLong"
            android:layout_marginTop="30dp" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/save"
            android:id="@+id/buttonSave"
            android:onClick="saveSettings"
            android:layout_below="@+id/labelTempFormat"
            android:layout_alignStart="@+id/labelTempFormat"
            android:layout_marginTop="52dp" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cancel"
            android:id="@+id/buttonCancel"
            android:onClick="dismiss"
            android:layout_alignTop="@+id/buttonSave"
            android:layout_alignEnd="@+id/radioGroupTemp" />

        <ToggleButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/toggleButtonLatLong"
            android:checked="true"
            android:layout_alignEnd="@+id/radioGroupTemp" />

        <RadioGroup
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/radioGroupTemp"
            android:layout_marginStart="20dp"
            android:layout_alignTop="@+id/labelTempFormat"
            android:layout_toEndOf="@+id/labelShowLatLong">

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/radio_celsius"
                android:id="@+id/radioButtonCelsius"
                android:textColor="@color/clr_black"
                android:enabled="true"
                android:checked="true"
                android:clickable="true" />

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/radio_fahrenheit"
                android:id="@+id/radioButtonFahrenheit"
                android:textColor="@color/clr_black"
                android:clickable="true"
                android:enabled="true" />

        </RadioGroup>

    </RelativeLayout>


</RelativeLayout>
