<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent" android:layout_height="match_parent">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/date_placholder"
        android:id="@+id/dateTextView"
        android:textColor="@color/clr_blue"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="10dp"
        android:layout_marginStart="15dp"
        android:textStyle="bold" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/city_placeholder"
        android:id="@+id/citycountryTextView"
        android:textColor="@color/clr_black"
        android:layout_alignParentTop="true"
        android:layout_toEndOf="@+id/dateTextView"
        android:layout_marginStart="30dp"
        android:layout_marginTop="10dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/weather_placeholder"
        android:id="@+id/weatherTextView"
        android:layout_below="@+id/citycountryTextView"
        android:layout_alignStart="@+id/citycountryTextView"
        android:layout_marginTop="10dp"
        android:paddingBottom="10dp" />
</RelativeLayout>